--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Parallax Template - Materialize</title>
+  <title>Corail Atelier créatif Jeune Public</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -52,9 +52,12 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h5 class="center">Histoire</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">Corail est un collectif d'artistes qui propose des ateliers créatifs et d'expression de soi.
+              Notre équipe d'animatrices-dessinatrices vous propose des stages d'été et des ateliers durant l'année.
+              Petits et grands s'exprimeront avec des crayons, des pinceaux, des ciseaux,
+              mais aussi de la sculpture ou du dessin animé! N'hésitez pas à nous contacter!</p>
           </div>
         </div>
 
@@ -85,11 +88,11 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">Une approche pédagogique qui plonge l"enfant dans la création</h5>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="background2.jpg" alt=""></div>
   </div>
 
   <div class="container">
@@ -98,8 +101,17 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Us</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <h4>ESPACES</h4>
+          <p class="left-align light">
+            Tous les mercredis du mois de novembre dans le bel espace de l'Harmonium à Uccle, le collectif Corail organise un atelier artistique pour les enfants de 6 à 12 ans mais aussi pour les plus petits accompagnés et pour les plus grands avec une âme d'enfant!
+Le 8 novembre, de 16h à 17h30:
+Illustre ton jeu de carte à l'encre de Chine
+De grandes cartes blanches, une plume, de l'encre, à toi de recréer une famille de cartes à ta manière en apprivoisant ta plume. Tel un explorateur, découvre cette substance ancestrale qu'est l'encre et plonge-toi dans le monde merveilleux des jeux de cartes.
+Tout le matériel et les tabliers sont fournis. Nous recommandons de venir avec des vêtements adaptés car les aventures artistiques laissent des marques :)
+Un atelier: 20 €
+Les 6 ateliers ( 4 en novembre, 2 en décembre): 100€
+Programme complet sur notre prospectus!
+N'hésitez pas à nous contacter pour plus d'informations à corail.collectif@gmail.com ou par message privé!</p>
         </div>
       </div>
 
@@ -115,7 +127,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="background3.jpg" alt=""></div>
   </div>
 
   <footer class="page-footer teal">
