--- a/index.html
+++ b/index.html
@@ -13,13 +13,21 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <a id="logo-container" href="#" class="brand-logo"><img src=images/logocorail.jpg alt="logo Corail"></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#">L'équipe</a></li>
+        <li><a href="#">Les Ateliers</a></li>
+        <li><a href="#">Les Espaces</a></li>
+        <li><a href="#">La Philosophie</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#">L'équipe</a></li>
+        <li><a href="#">Les Ateliers</a></li>
+        <li><a href="#">Les Espaces</a></li>
+        <li><a href="#">La Philosophie</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -29,9 +37,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
+        <h1 class="header center teal-text text-lighten-2">Atelier créatifs et participatifs</h1>
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">Une pédagogie basée sur l'expérimentation</h5>
         </div>
         <div class="row center">
           <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
@@ -64,18 +72,24 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
-
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <h5 class="center">Les ateliers</h5>
+             <p class="light">
+            En novembre, Corail se lance dans une nouvelle aventure à L'Harmonium et propose des ateliers le mercredi après-midi pour les enfants de 6 à 12 ans. En route pour un voyage autour du monde avec six ateliers où se mêleront dessin, sculpture, et découvertes!
+            Les 6 ateliers ( 4 en novembre, 2 en décembre): 100€
+            Programme complet sur notre prospectus!
+            N'hésitez pas à nous contacter pour plus d'informations à corail.collectif@gmail.com ou par message privé!
+            Plus d’infos? N’hésitez pas à nous contacter!
+            </p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
-
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <h5 class="center">Le matériel</h5>
+            <p class="light">Petit inventaire du matériel de base en cours: tabliers pour créer sans entrave, crayons à croquis, marqueurs et pastels de toutes les nuances... Une idée de ce que feront nos aqua-artistes de ces pages de bottin téléphonique?
+            Le carton est de plus en plus tendance pour réaliser des projets en volume.
+          </p>
           </div>
         </div>
       </div>
@@ -104,26 +118,20 @@
           <h4>ESPACES</h4>
           <p class="left-align light">
             Tous les mercredis du mois de novembre dans le bel espace de l'Harmonium à Uccle, le collectif Corail organise un atelier artistique pour les enfants de 6 à 12 ans mais aussi pour les plus petits accompagnés et pour les plus grands avec une âme d'enfant!
-Le 8 novembre, de 16h à 17h30:
-Illustre ton jeu de carte à l'encre de Chine
-De grandes cartes blanches, une plume, de l'encre, à toi de recréer une famille de cartes à ta manière en apprivoisant ta plume. Tel un explorateur, découvre cette substance ancestrale qu'est l'encre et plonge-toi dans le monde merveilleux des jeux de cartes.
-Tout le matériel et les tabliers sont fournis. Nous recommandons de venir avec des vêtements adaptés car les aventures artistiques laissent des marques :)
-Un atelier: 20 €
-Les 6 ateliers ( 4 en novembre, 2 en décembre): 100€
-Programme complet sur notre prospectus!
-N'hésitez pas à nous contacter pour plus d'informations à corail.collectif@gmail.com ou par message privé!</p>
+            Illustre ton jeu de carte à l'encre de Chine
+            De grandes cartes blanches, une plume, de l'encre, à toi de recréer une famille de cartes à ta manière en apprivoisant ta plume. Tel un explorateur, découvre cette substance ancestrale qu'est l'encre et plonge-toi dans le monde merveilleux des jeux de cartes.
+        </p>
         </div>
       </div>
 
     </div>
   </div>
 
-
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light"></h5>
         </div>
       </div>
     </div>
@@ -134,13 +142,12 @@ N'hésitez pas à nous contacter pour plus d'informations à corail.collectif@gm
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
+          <a href="#"><img src=images/logocorail.jpg alt="logo Corail"></a>
+          <p class="grey-text text-lighten-4">Une équipe bruxelloise inventive et multiculturelle offre des ateliers créatifs et participatifs.</p>
 
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
+          <h5 class="white-text">Nous contacter</h5>
           <ul>
             <li><a class="white-text" href="#!">Link 1</a></li>
             <li><a class="white-text" href="#!">Link 2</a></li>
@@ -149,7 +156,7 @@ N'hésitez pas à nous contacter pour plus d'informations à corail.collectif@gm
           </ul>
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
+          <h5 class="white-text">Nous suivre</h5>
           <ul>
             <li><a class="white-text" href="#!">Link 1</a></li>
             <li><a class="white-text" href="#!">Link 2</a></li>
@@ -161,7 +168,7 @@ N'hésitez pas à nous contacter pour plus d'informations à corail.collectif@gm
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Stéphane Dethy web designer</a>
       </div>
     </div>
   </footer>
