--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Corail Atelier créatif Jeune Public</title>
 
-  <!-- CSS  -->
+  <!-- CSS AD FONT -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
+
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo"><img src=images/logocorail.jpg alt="logo Corail"></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">L'équipe</a></li>
-        <li><a href="#">Les Ateliers</a></li>
-        <li><a href="#">Les Espaces</a></li>
-        <li><a href="#">La Philosophie</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#AT">Les Ateliers</a></li>
+        <li><a href="#ESP">Les Espaces</a></li>
+        <li><a href="#Real">Les Réalisations</a></li>
+        <li><a href="#Cont">Contact</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">L'équipe</a></li>
-        <li><a href="#">Les Ateliers</a></li>
-        <li><a href="#">Les Espaces</a></li>
-        <li><a href="#">La Philosophie</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#AT">Les Ateliers</a></li>
+        <li><a href="#ESP">Les Espaces</a></li>
+        <li><a href="#Real">Les Réalisations</a></li>
+        <li><a href="#Cont">Contact</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -42,7 +43,7 @@
           <h5 class="header col s12 light">Une pédagogie basée sur l'expérimentation</h5>
         </div>
         <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Découvrir</a>
         </div>
         <br><br>
 
@@ -56,16 +57,14 @@
     <div class="section">
 
       <!--   Icon Section   -->
-      <div class="row">
+      <div class="row" id="AT">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">bubble_chart</i></h2>
             <h5 class="center">Histoire</h5>
 
-            <p class="light">Corail est un collectif d'artistes qui propose des ateliers créatifs et d'expression de soi.
-              Notre équipe d'animatrices-dessinatrices vous propose des stages d'été et des ateliers durant l'année.
-              Petits et grands s'exprimeront avec des crayons, des pinceaux, des ciseaux,
-              mais aussi de la sculpture ou du dessin animé! N'hésitez pas à nous contacter!</p>
+            <p class="light">Corail est un collectif d'artistes qui propose des ateliers créatifs et d'expression de soi. Notre équipe d'animatrices-dessinatrices vous propose des stages d'été et des ateliers durant l'année. Petits et grands s'exprimeront avec des crayons,
+              des pinceaux, des ciseaux, mais aussi de la sculpture ou du dessin animé! N'hésitez pas à nous contacter!</p>
           </div>
         </div>
 
@@ -73,23 +72,20 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
             <h5 class="center">Les ateliers</h5>
-             <p class="light">
-            En novembre, Corail se lance dans une nouvelle aventure à L'Harmonium et propose des ateliers le mercredi après-midi pour les enfants de 6 à 12 ans. En route pour un voyage autour du monde avec six ateliers où se mêleront dessin, sculpture, et découvertes!
-            Les 6 ateliers ( 4 en novembre, 2 en décembre): 100€
-            Programme complet sur notre prospectus!
-            N'hésitez pas à nous contacter pour plus d'informations à corail.collectif@gmail.com ou par message privé!
-            Plus d’infos? N’hésitez pas à nous contacter!
+            <p class="light">
+              En novembre, Corail se lance dans une nouvelle aventure à L'Harmonium et propose des ateliers le mercredi après-midi pour les enfants de 6 à 12 ans. En route pour un voyage autour du monde avec six ateliers où se mêleront dessin, sculpture, et découvertes!
+              Les 6 ateliers ( 4 en novembre, 2 en décembre): 100€ Programme complet sur notre prospectus! N'hésitez pas à nous contacter pour plus d'informations à corail.collectif@gmail.com ou par message privé! Plus d’infos? N’hésitez pas à nous contacter!
             </p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">brush</i></h2>
             <h5 class="center">Le matériel</h5>
-            <p class="light">Petit inventaire du matériel de base en cours: tabliers pour créer sans entrave, crayons à croquis, marqueurs et pastels de toutes les nuances... Une idée de ce que feront nos aqua-artistes de ces pages de bottin téléphonique?
-            Le carton est de plus en plus tendance pour réaliser des projets en volume.
-          </p>
+            <p class="light">Petit inventaire du matériel de base en cours: tabliers pour créer sans entrave, crayons à croquis, marqueurs et pastels de toutes les nuances... Une idée de ce que feront nos aqua-artistes de ces pages de bottin téléphonique? Le carton est
+              de plus en plus tendance pour réaliser des projets en volume.
+            </p>
           </div>
         </div>
       </div>
@@ -112,15 +108,15 @@
   <div class="container">
     <div class="section">
 
-      <div class="row">
+      <div class="row" id="ESP">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>ESPACES</h4>
           <p class="left-align light">
             Tous les mercredis du mois de novembre dans le bel espace de l'Harmonium à Uccle, le collectif Corail organise un atelier artistique pour les enfants de 6 à 12 ans mais aussi pour les plus petits accompagnés et pour les plus grands avec une âme d'enfant!
-            Illustre ton jeu de carte à l'encre de Chine
-            De grandes cartes blanches, une plume, de l'encre, à toi de recréer une famille de cartes à ta manière en apprivoisant ta plume. Tel un explorateur, découvre cette substance ancestrale qu'est l'encre et plonge-toi dans le monde merveilleux des jeux de cartes.
-        </p>
+            Illustre ton jeu de carte à l'encre de Chine De grandes cartes blanches, une plume, de l'encre, à toi de recréer une famille de cartes à ta manière en apprivoisant ta plume. Tel un explorateur, découvre cette substance ancestrale qu'est l'encre
+            et plonge-toi dans le monde merveilleux des jeux de cartes.
+          </p>
         </div>
       </div>
 
@@ -138,37 +134,63 @@
     <div class="parallax"><img src="background3.jpg" alt=""></div>
   </div>
 
+  <div id="Real" class="row center">
+    <div class="col s12 center">
+    </div>
+    <div class="col s12 center">
+      <h5 class="header col s12 blue-text text-teal lighten-2">Les réalisations</h5>
+    </div>
+  </div>
+
+  <div class="row center">
+    <div class="col s12 m4">
+      <div class="portfolio"><img src="images/alacarte.jpg" alt="alacarte"></div>
+    </div>
+    <div class="col s12 m4">
+      <div class="portfolio"><img src="images/alacarte.jpg" alt="alacarte"></div>
+    </div>
+    <div class="col s12 m4">
+      <div class="portfolio"><img src="images/alacarte.jpg" alt="alacarte"></div>
+    </div>
+  </div>
+
+  <div id="Real" class="row center">
+    <div class="col s12 center">
+    </div>
+    <div class="col s12 center">
+    </div>
+  </div>
+
   <footer class="page-footer teal">
-    <div class="container">
+    <div id="Cont" class="container">
       <div class="row">
-        <div class="col l6 s12">
+        <div class="col s12 m4">
           <a href="#"><img src=images/logocorail.jpg alt="logo Corail"></a>
-          <p class="grey-text text-lighten-4">Une équipe bruxelloise inventive et multiculturelle offre des ateliers créatifs et participatifs.</p>
+          <p class="grey-text text-lighten-4">ASBL inventive et multiculturelle</p>
 
         </div>
-        <div class="col l3 s12">
+        <div class="col s12 m4">
           <h5 class="white-text">Nous contacter</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="#!">Tel 02 647 57 68</a></li>
+            <li><a class="white-text" href="#!">info@corail.be</a></li>
+            <li><a class="white-text" href="#!">Rue Fossé aux Loups 1000 Bruxelles</a></li>
           </ul>
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Nous suivre</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+        <div class="col s12 m4">
+          <ul class="icons">
+            <li><a class="white-text" href="#!"><i class="fa fa-twitter fa-2x"></i></a></li>
+            <li><a class="white-text" href="#!"><i class="fa fa-facebook fa-2x"></i></a></li>
+            <li><a class="white-text" href="#!"><i class="fa fa-instagram fa-2x"></i></a></li>
+
+
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Stéphane Dethy web designer</a>
+        Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Stéphane Dethy web designer</a>
       </div>
     </div>
   </footer>
@@ -179,5 +201,6 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
 
-  </body>
+</body>
+
 </html>
