--- a/index.html
+++ b/index.html
@@ -3,14 +3,28 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Corail Atelier créatif Jeune Public</title>
+  <meta name="description" content=" ateliers artistiques enfants"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
+  <title>Corail- Atelier créatif Jeune Public</title>
 
   <!-- CSS AD FONT -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
   <link rel="stylesheet" href="css/font-awesome.min.css">
+
+  <!-- CSS AD JS for SVG -->
+
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+  <script src="js/noframework.waypoints.min.js"></script>
+  <script src="js/dxcicons.js" type="text/javascript"></script>
+  <script src="js/dxcdeskicon01.js" type="text/javascript"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.3.0/snap.svg-min.js" type="text/javascript"></script>
+  <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+  <link rel="stylesheet" type="text/css" href="css/dxcicons.css">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
@@ -38,7 +52,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Atelier créatifs et participatifs</h1>
+        <h1 class="header center teal-text text-lighten-2">Ateliers créatifs</h1>
         <div class="row center">
           <h5 class="header col s12 light">Une pédagogie basée sur l'expérimentation</h5>
         </div>
@@ -144,13 +158,13 @@
 
   <div class="row center">
     <div class="col s12 m4">
-      <div class="portfolio"><img src="images/alacarte.jpg" alt="alacarte"></div>
+      <div class="portfolio"><img class="responsive-img" src="images/alacarte.jpg" alt="alacarte"></div>
     </div>
     <div class="col s12 m4">
-      <div class="portfolio"><img src="images/alacarte.jpg" alt="alacarte"></div>
+      <div class="portfolio"><img class="responsive-img" src="images/alacarte.jpg" alt="alacarte"></div>
     </div>
     <div class="col s12 m4">
-      <div class="portfolio"><img src="images/alacarte.jpg" alt="alacarte"></div>
+      <div class="portfolio"><img class="responsive-img" src="images/alacarte.jpg" alt="alacarte"></div>
     </div>
   </div>
 
@@ -200,7 +214,13 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
-
+  <script src="js/upup.min.js"></script>
+  <script>
+    UpUp.start({
+      'content-url': 'offline.html',
+      'assets': ['css/materialize.min.css', 'css/offline.css']
+    });
+  </script>
 </body>
 
 </html>
