--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
         <div class="col s12 m4">
           <h5 class="white-text">Nous contacter</h5>
           <ul>
-            <li><a class="white-text" href="#!">Tel 02 647 57 68</a></li>
-            <li><a class="white-text" href="#!">info@corail.be</a></li>
-            <li><a class="white-text" href="#!">Rue Fossé aux Loups 1000 Bruxelles</a></li>
+            <li><a class="white-text">Tel 02 647 57 68</a></li>
+            <li><a class="white-text">info@corail.be</a></li>
+            <li><a class="white-text">Rue Fossé aux Loups 1000 Bruxelles</a></li>
           </ul>
         </div>
         <div class="col s12 m4">
@@ -217,8 +217,8 @@
   <script src="js/upup.min.js"></script>
   <script>
     UpUp.start({
-      'content-url': 'offline.html',
-      'assets': ['css/materialize.min.css', 'css/offline.css']
+      'content-url': '/offline.html',
+      'assets': ['/css/materialize.min.css', '/css/offline.css']
     });
   </script>
 </body>
