--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="description" content=" ateliers artistiques enfants"/>
+  <meta name="description" content=" ateliers artistiques enfants "/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
   <title>Corail- Atelier créatif Jeune Public</title>
@@ -63,7 +62,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="images/background1.jpg" alt="visual ateliers créatifs"></div>
   </div>
 
 
@@ -116,7 +115,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt=""></div>
+    <div class="parallax"><img src="images/background2.jpg" alt="atelier de créations"></div>
   </div>
 
   <div class="container">
@@ -145,7 +144,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt=""></div>
+    <div class="parallax"><img src="images/background3.jpg" alt="creation d'atelier"></div>
   </div>
 
   <div id="Real" class="row center">
@@ -167,21 +166,18 @@
       <div class="portfolio"><img class="responsive-img" src="images/alacarte.jpg" alt="alacarte"></div>
     </div>
   </div>
-
   <div id="Real" class="row center">
     <div class="col s12 center">
     </div>
     <div class="col s12 center">
     </div>
   </div>
-
   <footer class="page-footer teal">
     <div id="Cont" class="container">
       <div class="row">
         <div class="col s12 m4">
           <a href="#"><img src=images/logocorail.jpg alt="logo Corail"></a>
           <p class="grey-text text-lighten-4">ASBL inventive et multiculturelle</p>
-
         </div>
         <div class="col s12 m4">
           <h5 class="white-text">Nous contacter</h5>
@@ -196,15 +192,13 @@
             <li><a class="white-text" href="#!"><i class="fa fa-twitter fa-2x"></i></a></li>
             <li><a class="white-text" href="#!"><i class="fa fa-facebook fa-2x"></i></a></li>
             <li><a class="white-text" href="#!"><i class="fa fa-instagram fa-2x"></i></a></li>
-
-
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-        Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Stéphane Dethy web designer</a>
+        réalisé par <a class="brown-text text-lighten-3" href="http://materializecss.com">Stéphane Dethy web designer</a>
       </div>
     </div>
   </footer>
